# FinanMind-IA

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: finanmind-architecture.mdc  finanmind-python-style.mdc
data/: investment_review_rules.json  usd_cop_rate.txt
instalador/: installer_builder.py  python_interpreter_picker.py
src/finanmind/: __init__.py  __main__.py  config.py  main.py
src/finanmind/budget/: __init__.py  book_service.py  csv_codec.py  repository.py  repository_factory.py  salary_shares.py
src/finanmind/models/: __init__.py  budget_category.py  budget_label.py  budget_review_recommendation.py  budget_review_request.py  budget_review_result.py  budget_review_risk.py  budget_workspace.py  credit_card.py  credit_card_category.py  credit_card_expense.py  credit_card_payment.py  financial_dashboard_snapshot.py  income_distribution_line.py  income_receipt.py  investment_category.py  investment_currency_code.py  investment_entry.py  investment_review_note.py  investment_review_request.py  investment_review_result.py  investment_review_risk.py  investment_review_rule.py  linked_pair_series.py  workspace_settings_record.py
src/finanmind/repositories/: __init__.py  budget_repository.py  budget_repository_factory.py  credit_card_csv_codec.py  credit_card_repository.py  credit_card_repository_factory.py  investment_csv_codec.py  investment_repository.py  investment_repository_factory.py  monthly_distribution_csv_codec.py  monthly_distribution_repository.py  monthly_distribution_repository_factory.py  (+1 more)
(+253 files in other folders)
