[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finanmind"
version = "0.1.0"
description = "Personal finance desktop application"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2",
    "tkcalendar>=1.6.1",
]

[project.scripts]
finanmind = "finanmind.main:Application.run"

[tool.setuptools.packages.find]
where = ["src"]
