[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finanmind"
version = "0.1.0"
description = "Personal finance desktop application"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2",
    "pywebview>=6.0,<7",
]

[project.scripts]
finanmind = "finanmind.main:Application.run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"finanmind" = [
    "webui/index.html",
    "webui/assets/css/*.css",
    "webui/assets/icons/*",
    "webui/assets/js/*.js",
    "webui/assets/js/core/*.js",
    "webui/assets/js/format/*.js",
    "webui/assets/js/budget/*.js",
    "webui/assets/js/budget/dialogs/*.js",
    "webui/assets/js/distribution/*.js",
    "webui/assets/js/distribution/dialogs/*.js",
    "webui/assets/js/cards/*.js",
    "webui/assets/js/cards/dialogs/*.js",
    "webui/assets/js/investments/*.js",
    "webui/assets/js/investments/dialogs/*.js",
    "webui/assets/js/dashboard/*.js",
]
